@@ -499,6 +499,7 @@ my $protono;
 %VRML::Nodes::Transchildren = qw(
  Transform	children
  Group		children
+ StaticGroup	children
  Billboard	children
  Anchor		children
  Collision	children
@@ -597,6 +598,7 @@ my $protono;
 	Sphere 			=>geometry,
 	SphereSensor 		=>children,
 	SpotLight 		=>children,
+	StaticGroup		=>children,
 	Switch 			=>children,
 	Text 			=>geometry,
 	TextureBackground 	=>children,
@@ -1327,6 +1329,17 @@ my $protono;
 						bboxCenter => [SFVec3f, [0, 0, 0], field],
 						bboxSize => [SFVec3f, [-1, -1, -1], field],
 						 __isProto => [SFInt32, 0, field],
+					   },
+					  ),
+	StaticGroup =>
+	new VRML::NodeType("StaticGroup",
+					   {
+						children => [MFNode, [], exposedField],
+						bboxCenter => [SFVec3f, [0, 0, 0], field],
+						bboxSize => [SFVec3f, [-1, -1, -1], field],
+						 __isProto => [SFInt32, 0, field],
+						 __transparency => [SFInt32, -1, field],
+						 __solid => [SFInt32, -1, field],
 					   },
 					  ),
 	Anchor =>
